--- a/src/style.css
+++ b/src/style.css
@@ -78,9 +78,37 @@ h1 {
 	margin-top: 20px;
 	font-weight: bold;
 }
+.weather-forecast {
+	display: flex;
+	justify-content: space-around;
+	margin-top: 30px;
+}
+
+.weather-forecast-date {
+	text-align: center;
+	color: rgba(0, 0, 0, 1);
+	font-size: 16px;
+	line-height: 20px;
+	margin-bottom: 10px;
+}
+
+.weather-forecast-icon {
+	font-size: 38px;
+	text-align: center;
+}
+.weather-forecast-temperatures {
+	text-align: center;
+	color: #660d5d;
+	margin-top: 10px;
+	display: flex;
+	justify-content: center;
+}
+
+.weather-forecast-temperature {
+	padding: 0 10px;
+}
 .weather-app-details {
 	margin-right: 10px;
-	font-family: "PT Sans Narrow", san s-serif;
 	font-size: 18px;
 	color: #660d5d;
 }
