--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 body {
 	font-family: "Playfair Display", serif, cursive;
+	font-weight: bold;
 }
 a {
 	color: #660d5d;
@@ -90,7 +91,7 @@ h1 {
 
 .weather-forecast-date {
 	text-align: center;
-	color: rgba(0, 0, 0, 1);
+	color: #660d5d;
 	font-size: 16px;
 	line-height: 20px;
 	margin-bottom: 10px;
@@ -106,6 +107,7 @@ h1 {
 	margin-top: 10px;
 	display: flex;
 	justify-content: center;
+	font-size: 18px;
 }
 
 .weather-forecast-temperature {
@@ -119,8 +121,9 @@ h1 {
 
 footer {
 	border-top: 1px solid #8a6789;
+	margin-top: 5px;
 	padding: 5px 0 0 0;
 	text-align: center;
 	font-size: 14px;
-	color: rgba(0, 0, 0, 0.8);
+	color: rgba(0, 0, 0, 0.4);
 }
